Added cotact page, need styling but it works

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,6 +26,42 @@
         <header class="section-header">
             <h1>Contact</h1>
         </header>
+        <div class="container">
+            <form action="http://formspree.io/f/mjvlegny" method="post">
+                <section id="contact" class="contact flex-columns">
+                    <div class="row">
+                        <div class="column">
+                            <div class="column-1">
+                                <img src="images/contact.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="column-2 bg-light">
+                                <form action="" class="callback-form">
+                                    <div class="form-control">
+                                        <label for="name">Name</label>
+                                        <input type="text" name="name" id="name" placeholder="Enter name">
+                                    </div>
+                                    <div class="form-control">
+                                        <label for="email">Email</label>
+                                        <input type="email" name="email" id="email" placeholder="Enter email">
+                                    </div>
+                                    <div class="form-control">
+                                        <label for="phone">Number</label>
+                                        <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                                    </div>
+                                    <div class="form-control">
+                                        <label for="message">Message</label>
+                                        <input type="text" name="message" id="message">
+                                    </div>
+                                    <input type="submit" value="Send" id="submit" class="btn">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+            </form>
+          </div>
+          
        
     </body>
     <footer class="footer bg-dark">
