Completed contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,40 +24,40 @@
             </div>
         </nav>
         <header class="section-header">
-            <h1>Contact</h1>
+            <h1>Get In Touch...</h1>
         </header>
         <div class="container">
             <form action="http://formspree.io/f/mjvlegny" method="post">
-                <section id="contact" class="contact flex-columns">
+                <section id="contact" class="callback-form flex-columns">
                     <div class="row">
                         <div class="column">
                             <div class="column-1">
-                                <img src="images/contact.jpg" alt="">
+                                <img src="../images/headshot-2.jpg" alt="">
                             </div>
                         </div>
                         <div class="column">
-                            <div class="column-2 bg-light">
+                            <div class="column-1">
                                 <form action="" class="callback-form">
                                     <div class="form-control">
                                         <label for="name">Name</label>
-                                        <input type="text" name="name" id="name" placeholder="Enter name">
+                                        <input type="text" name="name" id="name">
                                     </div>
                                     <div class="form-control">
                                         <label for="email">Email</label>
-                                        <input type="email" name="email" id="email" placeholder="Enter email">
+                                        <input type="email" name="email" id="email">
                                     </div>
                                     <div class="form-control">
                                         <label for="phone">Number</label>
-                                        <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                                        <input type="number" name="phone" id="phone" placeholder="please only enter numbers">
                                     </div>
-                                    <div class="form-control">
+                                    <div class="form-control message-box">
                                         <label for="message">Message</label>
                                         <input type="text" name="message" id="message">
                                     </div>
                                     <input type="submit" value="Send" id="submit" class="btn">
                                 </form>
                             </div>
-                        </div>
+                        </div> 
                     </div>
             </form>
           </div>
