Completed contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,13 +14,11 @@
         <nav  class="topnav">   
             <a class="active" href="../index.html">Home</a>
             <div class="topnav-right">
-                <a href="./pages/about.html">About</a>
-                <a href="./pages/education.html">Qualifications & Training</a>
-                <a href="./pages/employment.html">Employment</a>
-                <a href="./pages/skills.html">Skills</a>
-                <a href="./pages/hobbies.html">Hobbies</a>
-
-                <!-- <a href="./pages/contact.html">Contact</a> -->
+                <a href="../pages/about.html">About</a>
+                <a href="../pages/education.html">Qualifications & Training</a>
+                <a href="../pages/employment.html">Employment</a>
+                <a href="../pages/skills.html">Skills</a>
+                <a href="../pages/hobbies.html">Hobbies</a>
             </div>
         </nav>
         <header class="section-header">
