fixed navigational issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <main>
             <div class="hero section-header-left">
                 <h1>Kate Morris</h1>
-                <h2>My Sandbox & Shop Window</h2>
+                <h2>Vintage Coder</h2>
+                <h3>(Website a Work In Progress... As Am I)</h3>
             </div>
         </main>
 
