Added Medium Link

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -31,6 +31,7 @@
         <div class="social ">
             <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
             <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            
+            <a aria-label="Medium icon" href="https://medium.com/@kate-morris-new"><i class="fab fa-medium fa-2x"></i></a>  
         </div>
         <a href="./accessibility-statement.html">Accessibility Statement</a>
         <p>Copyright &copy; 2021 - Kate Morris</p>
