--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <footer class="footer bg-dark">
             <div class="social ">
                 <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            
+                <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a> 
+                <a aria-label="Medium icon" href="https://medium.com/@kate-morris-new"><i class="fab fa-medium fa-2x"></i></a>             
             </div>
             <a href="./pages/accessibility-statement.html">Accessibility Statement</a>
             <p>Copyright &copy; 2021 - Kate Morris</p>
