Added Skills as part of my revision for scrum master certification next week

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -22,9 +22,25 @@
                 <a href="../pages/contact.html">Contact</a>
             </div>
         </nav>
-        <header class="section-header">
+        <header class="center-element">
             <h1>Skills</h1>
         </header>
+        <main class="center-element">
+            <div class="row">
+                <a href="./skills/agile.html" class="btn">Implementing Agile</a>
+                <a href="./skills/agile.html" class="btn">Programming Languages</a>
+            </div>
+            <div class="row">
+                <a href="./skills/agile.html" class="btn">Implementing Agile</a>
+                <a href="./skills/agile.html" class="btn">Programming Languages</a>
+            </div>
+            <div class="row">
+                <a href="./skills/agile.html" class="btn">Implementing Agile</a>
+                <a href="./skills/agile.html" class="btn">Programming Languages</a>
+            </div>
+
+
+        </main>
        
     </body>
     <footer class="footer bg-dark">
