Cleaned up the CSS, need to get responsiveness right

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hero section-header-left">
                 <h1>Kate Morris</h1>
                 <h2>Vintage Coder</h2>
-                <h3>(Website a Work In Progress... As Am I)</h3>
+                <p>(Website a Work In Progress... As Am I)</p>
             </div>
         </main>
 
