--- a/pages/skills/agile.html
+++ b/pages/skills/agile.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
             <link rel="stylesheet" href="../../css/stylesheet.css">
-            <title>Skills</title>
+            <title>Implementing Agile</title>
 </head>
 <body>
     <main>
@@ -22,12 +22,19 @@
                 <a href="../../pages/contact.html">Contact</a>
             </div>
         </nav>
-        <header class="section-header">
+        <header class="center-element">
             <h1>Implementing Agile</h1>
         </header>
-        <main class="section-header">
-            <h2>Agile</h2>
-            <button  class="btn">Implementing Agile</button>
+        <main class="section-header-left">
+            <h2>Introduction</h2>
+            
+            <ul class="column">
+                <li>The plans are given to the contractor to negotiate a price and carry out the work</li>
+                <li>That is where the Waterfall Method needs to be abandonded...</li>
+                <li>Construction lends itself naturally to the Waterfall Method. </li>
+                <li>Architects discuss the project with the client and agree on the end result.</li>
+                <li>Planning permission is obtained and the structural calculations provided based on the architects plans.</li>
+            </ul>
         </main>
        
     </body>
